Ejemplo de estilos CSS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <div class="ejhg">
         <div class="dummy">
-            <p>ejemplo de estilos y selectores avanzados</p>
+            <p><strong>ejemplo</strong> de estilos y selectores avanzados</p>
         </div>
     </div>
 
@@ -56,6 +56,6 @@
     </table>
 </body>
 <footer>
-    
+
 </footer>
 </html>
